# clearing-engine

./: CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  README.md  ROADMAP.md
.github/workflows/: ci.yml
benches/: netting_benchmark.rs
docs/: architecture.md
docs/explorer/: index.html
examples/: basic_netting.rs  sample_obligations.json  trilateral_cycle.rs
src/: lib.rs  main.rs
src/core/: currency.rs  ledger.rs  mod.rs  obligation.rs  party.rs
src/graph/: cycle_detection.rs  mod.rs  payment_graph.rs  scc.rs
src/optimization/: liquidity.rs  mod.rs  netting.rs
src/simulation/: fx_volatility.rs  mod.rs  stress_test.rs
tests/: integration_tests.rs  property_tests.rs
